[package]
name = "usb-z"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.0"
features = [
    "setupapi", "usbiodef", "errhandlingapi", "winerror", "fileapi", "handleapi", "heapapi",
    "ioapiset",
]
